# par-max-dicut

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake  FindMOSEK.cmake
include/graph/: graph.hpp  graph_base.hpp
include/graph/partition/: partition_edgeslice.hpp  partition_edgeslice_type.hpp  partition_kaminpar.hpp  partition_kaminpar_type.hpp  partition_nodeslice.hpp  partition_nodeslice_type.hpp
include/parallel_mc/: framework.hpp  framework_runner.hpp  merge_by_maxcut.hpp  merge_by_maxcut_tree.hpp  merge_tree.hpp
include/sequential_mc/: bias.hpp  brute_force.hpp  buchbinder.hpp  derandomized.hpp  goemans.hpp  gurobi.hpp  local_search.hpp  random.hpp  relaxation.hpp
include/util/: cholesky_decomposition.hpp  debug_asserts.hpp  edges_file.hpp  evaluate_cut.hpp  logging.hpp  measure.hpp  metis_file.hpp  mtx_file.hpp  omp_util.hpp  random_util.hpp  rudy_file.hpp  span.hpp
src/: benchmark.cpp
